fix article images being too large
just set the upper bounds of the image, not the sizes directly

--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -4,8 +4,7 @@
 }
 
 .article-inner img {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
 }
 
 .article-inner ul {
